Specify dependencies as we go

--- a/vital_signs_viz.ipynb
+++ b/vital_signs_viz.ipynb
@@ -25,9 +25,7 @@
    "source": [
     "import glob\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import sklearn as skl\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as pgo"
    ]
@@ -181,6 +179,19 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Address InsecurePlatformWarning from running Python 2.7.6\n",
+    "import urllib3.contrib.pyopenssl\n",
+    "urllib3.contrib.pyopenssl.inject_into_urllib3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [
@@ -193,7 +204,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
