--- a/vital_signs_viz.ipynb
+++ b/vital_signs_viz.ipynb
@@ -160,7 +160,8 @@
    "source": [
     "layout = pgo.Layout(\n",
     "    title='% White',\n",
-    "    hovermode='closest'\n",
+    "    hovermode='closest',\n",
+    "    margin=pgo.Margin(l=300)  # add left margin for y-labels are long\n",
     ")"
    ]
   },
@@ -198,7 +199,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~marianne2/1584.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~marianne2/1584.embed?width=675&height=975\" height=\"1000\" width=\"700\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -210,7 +211,8 @@
     }
    ],
    "source": [
-    "py.iplot(fig, filename='baltimore-barh')"
+    "py.iplot(fig, filename='baltimore-barh',\n",
+    "         width=700, height=1000)  # adjust notebook display width and height"
    ]
   },
   {
